--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "repository": "https://github.com/LambdaSchool/webdb-i-challenge",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.22.0",
     "knex": "^0.20.13",
     "pg": "^8.0.2",
     "sqlite3": "^4.1.1"
